# zeta

./: .clang-format  .env  .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  action.yaml  docker-compose.yml  docker-entrypoint.sh  generate_properties.py  mount_system.py  pdb.yaml  pip_cli  pip_upload  prj.conf  properties.yaml  setup.py  version.yaml  zeta  zeta-cli-tests  zeta-isc-tests  zeta-mid-tests  zeta-run-tests.sh  zeta-sample-tests  zeta-tests  zeta-update-cli  zeta.yaml  zeta_generate.py
.github/workflows/: test-zeta.yml
docs/: Doxyfile  Makefile  requirements.txt
docs/source/: basics.rst  code.rst  conf.py  index.rst  license.rst
include/: pdb.h  pdb_callbacks.h  pdb_observers.h  pdb_old.h  pdb_unit_tests.h  pdb_validators.h
samples/basic/: CMakeLists.txt  prj.conf  prj_nrf52840dk_nrf52840.conf  prj_nrf52840dongle_nrf52840.conf  zeta.cmake  zeta.yaml
samples/basic/src/: main.c
samples/isc_adaptor_messages/: zeta.cmake  zeta.yaml
samples/isc_adaptor_messages/zeta/: CMakeLists.txt  Kconfig  zeta.conf
samples/isc_adaptor_messages/zeta/include/: zeta.h
samples/light_control/: CMakeLists.txt  prj.conf  prj_native_posix.conf  zeta.cmake  zeta.yaml
samples/light_control/src/: core.c  main.c  net.c  peripheral.c
samples/pub_cb_o2n_performance/: CMakeLists.txt  Kconfig  chart.py  prj.conf  prj_nrf52840_pca10059.conf  zeta.cmake  zeta.yaml
samples/pub_cb_o2n_performance/src/: ping.c  pong.c  s02.c  s03.c  s04.c  s05.c  s06.c  s07.c  s08.c  s09.c  s10.c
samples/pub_cb_o2o_performance/: CMakeLists.txt  Kconfig  chart.py  prj.conf  prj_native_posix.conf  zeta.cmake  zeta.yaml  zeta_size.txt
samples/pub_cb_o2o_performance/src/: board.c  core.c  ping.c  pong.c
samples/sensors-over-internet/: CMakeLists.txt  prj.conf  prj_native_posix.conf  prj_nrf52840_pca10059.conf  trace.py  zeta.cmake  zeta.yaml
samples/sensors-over-internet-msg/: prj.conf  prj_nrf52840_pca10059.conf  prj_nrf52840dk_nrf52840.conf  zeta.yaml
samples/sensors-over-internet-msg/src/: board.c  core.c  net.c
samples/sensors-over-internet/src/: board.c  core.c  net.c
samples/sunlight_model/: CMakeLists.txt  README.md  core_model.py  light_model.py  prj.conf  prj_native_posix.conf  prj_nrf52833dk_nrf52833.conf  renode_setup.resc  sunlight_model.py  zeta.cmake  zeta.yaml
samples/sunlight_model/src/: core.c  isc.c  light.c
samples/template_project/: prj_nrf52840dk_nrf52840.conf
src/: main.c  pdb.c  pdb_callbacks.c  pdb_observers.c  pdb_unit_tests.c  pdb_validators.c  test_main.c
templates/: pdb.template.c  pdb.template.h  pdb_callbacks.template.h  pdb_custom_functions.template.h  pdb_threads.template.c  pdb_threads.template.h  zeta.template.c  zeta.template.cmake  zeta.template.conf  zeta.template.h  zeta.template.yaml  zeta_callbacks.template.h  zeta_custom_functions.template.h  zeta_threads.template.c  zeta_threads.template.h
test/: pdb_test.yaml  zeta_test.yaml
test/include/: pdb_unit_tests.h  zeta_unit_tests.h
test/src/: test_functions.c  test_main.c
tests/: CMakeLists.txt  channels.yaml  firmware_version.yaml  messages.yaml  prj.conf  services.yaml  zeta.cmake  zeta.conf  zeta.yaml
tests/include/: zeta_unit_tests.h
tests/ipc_test/: core_model.py  exec_test.py  prj.conf  prj_hifive1_revb.conf  prj_nrf52833dk_nrf52833.conf  prj_nrf52840dk_nrf52840.conf  pub_count.py  red_v.overlay  renode_setup.resc  sunlight_model.py
tests/src/: test_functions.c  test_main.c
zeta/: __init__.py  __main__.py  _version.py  forwader_ui.py  messages.py  requirements.txt  sniffer.py  zeta.py  zeta_cli.py  zeta_errors.py  zeta_isc.py  zeta_pkt.py
zeta/templates/: new.c  zeta.template.c  zeta.template.cmake  zeta.template.conf  zeta.template.h  zeta.template.yaml  zeta_callbacks.template.h  zeta_custom_functions.template.h  zeta_service.template.c  zeta_service.template_c  zeta_services.template.h  zeta_threads.template.c  zeta_threads.template.h  zeta_with_services.template.cmake
zeta/templates/zeta/: CMakeLists.txt  Kconfig
zeta/templates/zeta/include/: zt_serial_ipc.h  zt_uart.h
zeta/templates/zeta/src/: zt_serial_ipc.c  zt_uart.c
(+1 files in other folders)
